# rust_fat32

./: Cargo.toml  README.md  fat32-exam.bundle
.cargo/: config.toml
src/: allocator.rs  lib.rs  main.rs
src/fat32/: boot_sector.rs  directory.rs  fat.rs  mod.rs
src/shell/: commands.rs  mod.rs  parser.rs
tests/: fat32_tests.rs
